--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,29 +5,14 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
-            "type": "cppdbg",
+            "name": "(lldb) Launch",
+            "type": "lldb",
             "request": "launch",
-            "program": "${workspaceFolder}/main.exe",
-            "args": ["<in.txt"],
-            "stopAtEntry": false,
+            "program": "${workspaceFolder}/main",
+            "args": [],
             "cwd": "${workspaceFolder}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "miDebuggerPath": "C:/msys64/mingw64/bin/gdb.exe",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description":  "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
+            "stdio": ["in.txt", null, null],
+            "stopOnEntry": false
         }
     ]
 }
